<resources>
<string name="app_name">CST2335 Graphical Interface Programming</string>
    <string name="app_name1">Hisham\'s Android Labs</string>

    <string name="location_info">Location Information</string>

    <string name="latitude_input_text">Enter latitude:</string>
    <string name="latitude_input_hint">Enter latitude</string>

    <string name="longitude_input_text">Enter longitude:</string>
    <string name="longitude_input_hint">Enter longitude</string>

    <string name="lookup_text">Lookup</string>
    <string name="view_favorite_locations_text">View Favorite Locations</string>

    <string name="save_location_text">Save Location</string>
    <string name="back_text">Back</string>

    <string name="time_zone_sentence">Time zone:</string>
    <string name="time_zone_hint">Time zone goes here</string>

    <string name="sunrise_sentence">Sunrise Time:</string>
    <string name="sunrise_hint">Sunrise time goes here</string>

    <string name="sunset_sentence">Sunset Time:</string>
    <string name="sunset_hint">Sunset time goes here</string>

    <string name="favourite_locations_list">Favourite Locations List</string>

    <string name="date_time_sentence">Current Date and Time:</string>
    <string name="date_hint">Date and time go here</string>

    <string name="latitude_longitude_isEmpty">Please enter latitude and longitude</string>
    <string name="save_location_sentence">The location has been saved successfully</string>

    <string name="alert_title">Delete/Update Location</string>
    <string name="alert_sentence">Please choose one of the options below</string>
    <string name="delete_option">Delete</string>
    <string name="update_option">Update</string>

    <string name="error_message">Error fetching data</string>

    <string name="delete_sentence">The location has been successfully deleted</string>
    <string name="update_sentence">The location has been updated successfully</string>

    <string name="undo">UNDO</string>
    <string name="ok">OK</string>

    <string name="about">ABOUT</string>
    <string name="about_message">Instructions on how to use the interface go here.</string>

    <string name="clear">Clear</string>
    <string name="clear_message">Inputs cleared</string>

    <string name="app_name2">Dictionary</string>
    <string name="main_title">What definition are you looking for?</string>
    <string name="saved_words_title">Saved Words</string>
    <string name="help_title">Help</string>
    <string name="help_info">Welcome to the Search Dictionary!  To begin, simply type your query into the search bar and hit Enter or click the search icon. Happy searching!</string>

    <string name="app_name3">Recipe Search</string>
    <string name="recipe_main_title">What recipes are you looking for?</string>
    <string name="saved_recipe_title">Saved Recipes</string>
    <string name="recipe_help_info">Welcome to the recipe search app, please type in a recipe keyword.</string>


</resources>